@@ -53,6 +53,7 @@ causing data corruption (the null termination on signalled)
 + Added TnFXSQLDBTransaction
 * Fixed a build problem on Unix with newer versions of scons
 + Added stack backtracing for GCC builds to FXException
++ Added errorIfNotFound parameter to fxdemanglesymbol()
 
 
 v0.86 2nd April 2006
